--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
         <td>5.</td> <td>történelem</td> <td>digitális kultúra</td>
         <td>biológia</td> <td>digitális kultúra</td> <td>fizika</td>
     </tr>
+     <tr>
+        <td>6.</td> <td>francia lektori társalgás</td> <td>biológia</td>
+        <td>angol nyelv</td> <td>magyar nyelv</td> <td>vizuális kultúra</td>
+    </tr>
+     <tr>
+        <td>6.</td> <td>ének</td> <td>francia nyelv</td>
+        <td></td> <td>biológia</td> <td>osztályfőnöki</td>
+    </tr>
 </table></body>
 <style>
     td {
